<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:padding="8dp"

            android:layout_centerInParent="true"
            />

        <Button
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/add_image_button"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_edit_label"
                style="@style/CategoryStyle"
                android:text="@string/category_name" />

            <EditText
                android:id="@+id/name_edit"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price_edit_label"
                style="@style/CategoryStyle"
                android:text="@string/category_price" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/price_edit"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_price"
                    android:inputType="numberDecimal" />
                <TextView

                    android:id="@+id/label_weight_units"
                    android:layout_alignRight="@+id/quantity_edit"
                    android:text="€"
                    style="@style/EditorUnitsStyle"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/quantity_label_edit"
                style="@style/CategoryStyle"
                android:text="@string/category_quantity" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2">

                <Button
                    android:id="@+id/decrease_button"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="-"
                    android:layout_alignRight="@+id/quantity_label" />

                <EditText
                    android:id="@+id/quantity_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_alignRight="@+id/increase_button"
                    android:text="0"
                    android:fontFamily="sans-serif-light"
                    android:inputType="number" />



                <Button
                    android:id="@+id/increase_button"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="+"
                    android:layout_alignRight="@+id/quantity_label" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/supplier_edit_label"
                style="@style/CategoryStyle"
                android:text="@string/category_supplier" />

            <EditText
                android:id="@+id/supplier_edit"
                style="@style/EditorFieldStyle"
                android:hint="@string/category_supplier"
                android:inputType="textCapWords" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/order_button" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/delete_button" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>