<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for a single list item in the list of items -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/name_inventory"
        style="@style/item_information_header"
        tools:text="Name"/>

    <LinearLayout
        android:id="@+id/layout_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_inventory"
        android:layout_marginTop="8dp">
        <TextView
            android:id="@+id/price_inventory_label"
            style="@style/item_information_description"
            tools:text="Price"
            android:text="@string/category_price"/>

        <TextView
            android:id="@+id/price_inventory"
            style="@style/item_information_description"
            android:layout_marginLeft="16dp"
            tools:text="22.50" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_price"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/quantity_inventory_label"
            style="@style/item_information_description"
            android:text="@string/category_quantity"
            tools:text="Quantity" />

        <TextView
            android:id="@+id/quantity_inventory"
            style="@style/item_information_description"
            android:layout_marginLeft="16dp"
            tools:text="Quantity" />
    </LinearLayout>

    <Button
        android:id="@+id/sell_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:focusable="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/sell_button"/>

</RelativeLayout>